correción de error Integer en Checker